--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -43,7 +43,7 @@ set confirm_on_delete multiple
 # Use non-default path for file preview script?
 # ranger ships with scope.sh, a script that calls external programs (see
 # README.md for dependencies) to preview images, archives, etc.
-#set preview_script ~/.config/ranger/scope.sh
+set preview_script ~/.config/ranger/scope.sh
 
 # Use the external preview script or display simple plain text or image previews?
 set use_preview_script true
@@ -115,7 +115,7 @@ set preview_images true
 #   Only for users who run X11 in GNU/Linux.
 
 # * sixel:
-set preview_images_method sixel
+set preview_images_method imv
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
