--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -802,6 +802,71 @@ schemes:
       cyan:    '#54ced6'
       white:   '#282a2e'
 
+  ### Novel ###
+  Novel: &Novel
+    bright:
+      black: '#808080'
+      blue: '#0000cc'
+      cyan: '#0087cc'
+      green: '#009600'
+      magenta: '#cc00cc'
+      red: '#cc0000'
+      white: '#aaaaaa'
+      yellow: '#d06b00'
+    cursor:
+      cursor: '#73635a'
+      text: '#000000'
+    normal:
+      black: '#000000'
+      blue: '#0000cc'
+      cyan: '#0087cc'
+      green: '#009600'
+      magenta: '#cc00cc'
+      red: '#cc0000'
+      white: '#aaaaaa'
+      yellow: '#d06b00'
+    primary:
+      background: '#dfdbc3'
+      foreground: '#3b2322'
+    selection:
+      background: '#a4a390'
+      text: '#000000'
+
+
+  ### TokyoDay ###
+  TokyoDay: &TokyoDay
+    # Default colors
+    primary:
+      background: '0xe1e2e7'
+      foreground: '0x3760bf'
+
+    # Normal colors
+    normal:
+      black:   '0xe9e9ed'
+      red:     '0xf52a65'
+      green:   '0x587539'
+      yellow:  '0x8c6c3e'
+      blue:    '0x2e7de9'
+      magenta: '0x9854f1'
+      cyan:    '0x007197'
+      white:   '0x6172b0'
+
+    # Bright colors
+    bright:
+      black:   '0xa1a6c5'
+      red:     '0xf52a65'
+      green:   '0x587539'
+      yellow:  '0x8c6c3e'
+      blue:    '0x2e7de9'
+      magenta: '0x9854f1'
+      cyan:    '0x007197'
+      white:   '0x3760bf'
+
+    indexed_colors:
+      - { index: 16, color: '0xb15c00' }
+      - { index: 17, color: '0xc64343' }
+
+
 ######################################################################
 ## SET THEME: Choose ONE color scheme from those in the above list. ##
 ## ###################################################################
@@ -820,7 +885,7 @@ schemes:
 # *SolarizedDark
 # *TomorrowNight
 
-colors: *Catppuccin-Frappe
+colors: *TokyoDay
 
 # Visual Bell
 #
