--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule ".config/zsh/plugins/zsh-completions"]
 	path = .config/zsh/plugins/zsh-completions
 	url = git@github.com:zsh-users/zsh-completions.git
+[submodule ".local/bin/asdf"]
+	path = .local/bin/asdf
+	url = https://github.com/asdf-vm/asdf.git
+	branch = v0.14.0
