--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,7 +13,7 @@ set-option -g prefix C-a
 # Vim keys in copy-mode
 set -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X cope-selection-and-cancel
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # Toggle status bar with prefix-b
 bind-key b set-option status
@@ -28,7 +28,7 @@ set -g base-index 1
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'jabirali/tmux-tilish'
 set -g @plugin 'sunaku/tmux-navigate'
 set -g @plugin 'niksingh710/minimal-tmux-status'
@@ -36,8 +36,12 @@ set -g @plugin 'niksingh710/minimal-tmux-status'
 # Plugin settings
 set -g @tilish-navigate 'on'
 set -g @tilish-dmenu 'on'
-set -g @tilish-shiftnum '!@£$%^&*()'
+set -g @tilish-shiftnum '!@#$%^&*()'
 set -g @minimal-tmux-bg "#878787"
+set -g @minimal-tmux-justify "left"
+set -g @minimal-tmux-indicator-str " ‡ "
+set -g @minimal-tmux-indicator true
+set -g @minimal-tmux-status "top"
 
 # Install `tpm` if needed.
 if "test ! -d ~/.tmux/plugins/tpm" \
