--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,6 +18,12 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 # Toggle status bar with prefix-b
 bind-key b set-option status
 
+# Pane resizing
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
+
 
 ## Options
 # Windows are 1-indexed
@@ -50,3 +56,5 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
+# Plugin config overrides
+bind-key -n 'M-q' kill-pane
