--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -48,6 +48,8 @@ set -g @minimal-tmux-justify "left"
 set -g @minimal-tmux-indicator-str " ‡ "
 set -g @minimal-tmux-indicator true
 set -g @minimal-tmux-status "top"
+set -g @minimal-tmux-status-right "#S | #(date +%y.%m.%d-%H:%M:%S) #(date +%s)"
+set -g status-right-length 100
 
 # Install `tpm` if needed.
 if "test ! -d ~/.tmux/plugins/tpm" \
