Set tmux default tiling mode to vertical first

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -42,6 +42,7 @@ set -g @plugin 'niksingh710/minimal-tmux-status'
 # Plugin settings
 set -g @tilish-navigate 'on'
 set -g @tilish-dmenu 'on'
+set -g @tilish-default 'main-vertical'
 set -g @tilish-shiftnum '!@#$%^&*()'
 set -g @minimal-tmux-bg "#878787"
 set -g @minimal-tmux-justify "left"
