Alt-c for tmux copy mode

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,13 +10,14 @@
 # Ctrl-a for prefix
 set-option -g prefix C-a
 
-# Vim keys in copy-mode
+# Toggle status bar with prefix-b
+bind-key b set-option status
+
+# Alt-c for copy-mode with vim bindings
+bind -n M-c copy-mode
 set -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-
-# Toggle status bar with prefix-b
-bind-key b set-option status
 
 # Pane resizing
 bind-key -r H resize-pane -L 5
