--- a/.gitconfig
+++ b/.gitconfig
@@ -4,3 +4,10 @@
 	email = toby@tgs.onl
 [core]
 	editor = nvim
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+[pull]
+	rebase = false
