--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -29,7 +29,10 @@ bind-key -r L resize-pane -R 5
 ## Options
 # Windows are 1-indexed
 set -g base-index 1
-
+# Rename window to current directory
+set-option -g status-interval 1
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 ## TPM
 # Plugins
