--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -53,7 +53,7 @@ set -g @minimal-tmux-justify "left"
 set -g @minimal-tmux-indicator-str " ‡ "
 set -g @minimal-tmux-indicator true
 set -g @minimal-tmux-status "top"
-set -g @minimal-tmux-status-right "#S | #(date +%y.%m.%d-%H:%M:%S) #(date +%s)"
+set -g @minimal-tmux-status-right-extra " | %y/%m/%d %H:%M:%S"
 set -g status-right-length 100
 
 # Install `tpm` if needed.
