feat(tmux): Change prefix to C-f

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,8 +7,8 @@
 # https://github.com/tmux-plugins/tmux-sessionist
 
 ## Keybinds
-# Ctrl-a for prefix
-set-option -g prefix C-a
+# Ctrl-f for prefix
+set-option -g prefix C-f
 
 # Toggle status bar with prefix-b
 bind-key b set-option status
