feat(nvim): Submodule nvim config

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = .local/bin/asdf
 	url = https://github.com/asdf-vm/asdf.git
 	branch = v0.14.0
+[submodule ".config/nvim"]
+	path = .config/nvim
+	url = git@github.com:tgsl8r/nvim.git
