feat(amethyst): Add direct bind for column layout

--- a/.config/amethyst/amethyst.yml
+++ b/.config/amethyst/amethyst.yml
@@ -240,6 +240,11 @@ select-tall-layout:
   mod: mod1
   key: t
 
+# Select column layout
+select-column-layout:
+  mod: mod1
+  key: c
+
 # Select fullscreen (monocle) layout
 select-fullscreen-layout:
   mod: mod1
