--- a/.config/amethyst/amethyst.yml
+++ b/.config/amethyst/amethyst.yml
@@ -31,11 +31,11 @@ layouts:
   - tall
   - fullscreen
   # - tall-right
-  - wide
-  # - two-pane
+  # - wide
+  - two-pane
   # - middle-wide
   # - 3column-left
-  # - middle-wide # The legacy name of "3column-middle"
+  - 3column-middle
   # - 3column-right
   # - 4column-left
   # - 4column-right
